# MCP-DATABASE

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_informix/: __init__.py  __main__.py  config.py  db.py  server.py  setup.py  tools.py
src/mcp_mysql/: __init__.py  __main__.py  config.py  db.py  server.py  setup.py  tools.py
src/mcp_oracle/: __init__.py  __main__.py  config.py  db.py  server.py  setup.py  tools.py
src/mcp_postgresql/: __init__.py  __main__.py  config.py  db.py  server.py  setup.py  tools.py
src/mcp_sqlserver/: __init__.py  __main__.py  config.py  db.py  server.py  setup.py  tools.py
