[project]
name = "mcp-database"
version = "0.1.0"
description = "MCP servers for MySQL and Oracle database connections"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "mysql-connector-python>=9.0.0",
    "oracledb>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mcp-mysql = "mcp_mysql.server:main"
mcp-mysql-setup = "mcp_mysql.setup:main"
mcp-oracle = "mcp_oracle.server:main"
mcp-oracle-setup = "mcp_oracle.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mysql", "src/mcp_oracle"]
